[Fix] navbar sidebar height issue on mobile

--- a/src/css/custom/index.less
+++ b/src/css/custom/index.less
@@ -964,8 +964,8 @@ body {
   backdrop-filter: blur(12px);
 
   .navbar-sidebar {
-    background: inherit;
     z-index: 11;
+    height: 100vh;
   }
 
   // 切换主题，防止抖动
